force-app/main/default/objects/LLC_BI__Date_Template_Recurrence__c/LLC_BI__Date_Template_Recurrence__c.object-meta.xml
<CustomObject>
    <description>This custom object defines the reoccurring date template data for a date template.</description>
    <label>Date Template Recurrence</label>
    <nameField>
        <displayFormat>DT-{0000000}</displayFormat>
        <label>Date Template Recurrence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Template Recurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>