force-app/main/default/objects/LLC_BI__Date_Template_Recurrence__c/fields/LLC_BI__Date_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Template__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this required lookup field to reference the parent Date_Template.</description>
    <inlineHelpText>This lookup field references the Parent Date_Template for this Month-Day combination.</inlineHelpText>
    <label>Date_Template</label>
    <referenceTo>LLC_BI__Date_Template__c</referenceTo>
    <relationshipLabel>Date Template Recurrences</relationshipLabel>
    <relationshipName>Date_Template_Recurrences</relationshipName>
    <type>Lookup</type>
</CustomField>