force-app/main/default/objects/LLC_BI__Date_Template_Recurrence__c/fields/LLC_BI__Day__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Day__c</fullName>
    <description>Administrators populate this number field to set the day on the date template. By default, it is blank.</description>
    <inlineHelpText>Select the day for this template</inlineHelpText>
    <label>Day</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>