force-app/main/default/objects/LLC_BI__Date_Template_Recurrence__c/fields/LLC_BI__Month__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Month__c</fullName>
    <description>Administrators populate this optional picklist field to set the month on the date template. By default, it is blank.</description>
    <inlineHelpText>Select the month for this template</inlineHelpText>
    <label>Month</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>January</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>February</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>March</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>April</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>May</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>June</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>July</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>August</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>September</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>October</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>November</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>December</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>